# stable-diffusion

./: Dockerfile  MANIFEST.in  pyproject.toml  requirements.txt
scripts/: inpaint.py
